lab-3: rewrite README in the polished lab-series style
Restructure into Architecture / Prerequisites / Files / Quick Start /
How It Works / Replication / Troubleshooting, with a branch footer linking
the rest of the series. Same technical content, professionally organized.